fix sandbox cannot startup problem

--- a/php.ini
+++ b/php.ini
@@ -458,7 +458,7 @@ memory_limit = 128M
 ; Development Value: E_ALL
 ; Production Value: E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; http://php.net/error-reporting
-error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
+error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT & ~E_NOTICE
 
 ; This directive controls whether or not and where PHP will output errors,
 ; notices and warnings too. Error output is very useful during development, but
@@ -475,7 +475,7 @@ error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/display-errors
-display_errors = Off
+display_errors = On
 
 ; The display of errors which occur during PHP's startup sequence are handled
 ; separately from display_errors. PHP's default behavior is to suppress those
@@ -486,7 +486,7 @@ display_errors = Off
 ; Development Value: On
 ; Production Value: Off
 ; http://php.net/display-startup-errors
-display_startup_errors = Off
+display_startup_errors = On
 
 ; Besides displaying errors, PHP can also log errors to locations such as a
 ; server-specific log, STDERR, or a location specified by the error_log
@@ -1860,19 +1860,22 @@ ldap.max_links = -1
 ; tab-width: 4
 ; End:
 
+[admindb]
+admindb.host = localhost
+admindb.port = 3306
+admindb.filesock = /var/run/mysqld/mysqld.sock
+admindb.name = ustcblog
+admindb.user = blog-www
+admindb.pass = blog
+
 [sandbox]
-sandbox.admindb_host = localhost
-sandbox.admindb_port = 3306
-sandbox.admindb_name = ustcblog
-sandbox.admindb_user = blog-www
-sandbox.admindb_pass = blog
 sandbox.chroot_basedir = /tmp
 sandbox.chroot_basedir_peruser = /srv/blog
 sandbox.hostname_for_subdomain = localhost
 
 [blog]
-sandbox.userdb_prefix = ub_
+blog.userdb_prefix = ub_
 
 [daemon]
-daemon.daemon_hostname = 127.0.0.1
-daemon.daemon_port = 0
+daemon.hostname = 127.0.0.1
+daemon.port = 0
