--- a/php.ini
+++ b/php.ini
@@ -496,7 +496,7 @@ display_startup_errors = On
 ; Development Value: On
 ; Production Value: On
 ; http://php.net/log-errors
-log_errors = On
+log_errors = Off
 
 ; Set maximum length of log_errors. In error_log information about the source is
 ; added. The default is 1024 and 0 allows to not apply any maximum length at all.
@@ -1878,4 +1878,4 @@ blog.userdb_prefix = ub_
 
 [daemon]
 daemon.hostname = 127.0.0.1
-daemon.port = 0
+daemon.port = 12696
