fix SUCCESS == -1 segfault problem

--- a/php.ini
+++ b/php.ini
@@ -1870,7 +1870,7 @@ admindb.pass = blog
 
 [sandbox]
 sandbox.chroot_basedir = /tmp
-sandbox.chroot_basedir_peruser = /srv/blog
+sandbox.chroot_basedir_peruser = /srv/blog/base
 sandbox.hostname_for_subdomain = localhost
 
 [blog]
