fix possible segmentation fault
add appid back to header

--- a/php.ini
+++ b/php.ini
@@ -1875,6 +1875,7 @@ sandbox.hostname_for_subdomain = localhost
 
 [blog]
 blog.userdb_prefix = ub_
+blog.max_blogs_per_email = 5
 
 [daemon]
 daemon.hostname = 127.0.0.1
