php app_root_url()
allow get/post url of local path

--- a/php.ini
+++ b/php.ini
@@ -1880,4 +1880,4 @@ blog.max_blogs_per_email = 3
 [daemon]
 daemon.hostname = 127.0.0.1
 daemon.port = 12696
-daemon.http_prefix = http://api.wordpress.org
+daemon.http_prefix = http://api.wordpress.org/
