php.ini add allowed hosts

--- a/php.ini
+++ b/php.ini
@@ -1869,7 +1869,7 @@ admindb.user = blog-www
 admindb.pass = blog
 
 [sandbox]
-sandbox.chroot_basedir = /tmp
+sandbox.chroot_basedir = /tmp:/home/boj/blog-boj/lib/wp-source
 sandbox.chroot_basedir_peruser = /srv/blog/base
 sandbox.hostname_for_subdomain = localhost
 
@@ -1880,4 +1880,4 @@ blog.max_blogs_per_email = 3
 [daemon]
 daemon.hostname = 127.0.0.1
 daemon.port = 12696
-daemon.http_prefix = http://api.wordpress.org/,http://wordpress.org/,http://blogsearch.google.com/,http://planet.wordpress.org/,http://cn.wordpress.org/
+daemon.allowed_hosts = wordpress.org,blogsearch.google.com,rest.akismet.com,66.135.58.62,66.135.58.61,72.233.69.88,72.233.69.89
