enhance security: disable functions in php.ini

--- a/php.ini
+++ b/php.ini
@@ -311,7 +311,7 @@ serialize_precision = 17
 ; It receives a comma-delimited list of function names. This directive is
 ; *NOT* affected by whether Safe Mode is turned On or Off.
 ; http://php.net/disable-functions
-disable_functions = eval
+disable_functions = eval,fsockopen,exec,system,passthru,popen,pclose,shell_exec,proc_open,dl,curl_exec,multi_exec,chmod,gzinflate,set_time_limit
 
 ; This directive allows you to disable certain classes for security reasons.
 ; It receives a comma-delimited list of class names. This directive is
@@ -1875,7 +1875,7 @@ sandbox.hostname_for_subdomain = localhost
 
 [blog]
 blog.userdb_prefix = ub_
-blog.max_blogs_per_email = 3
+blog.max_blogs_per_email = 5
 
 [daemon]
 daemon.hostname = 127.0.0.1
